--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "devpark/laravel-przelewy24",
-    "description": "Laravel przelewy24.pl integration",
+    "name": "rozwell/lumen-przelewy24",
+    "description": "Lumen przelewy24.pl integration",
     "type": "library",
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": ">=5.0",
+        "laravel/lumen-framework": ">=5.0",
         "guzzlehttp/guzzle": ">=6.3",
         "ramsey/uuid": "^3 || ^4",
         "ext-json": "*"
